--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,14 @@ body {
   text-decoration: underline;
 }
 
+.image-galerie {
+  max-width: 400px;
+  width: 100%
+  height: auto
+  display: block
+  margin: 2em auto;
+}
+
 main {
   padding: 2em;
 }
