--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
-  <a href="/">Accueil</a>
-  <a href="/evenements">Évènements passés</a>
-  <a href="/galerie">Galerie</a>
-  <a href="/contact">Nous contacter</a>
+    <a href="{{ site.baseurl }}/">Accueil</a>
+    <a href="{{ site.baseurl }}/evenements">Évènements passés</a>
+    <a href="{{ site.baseurl }}/galerie">Galerie</a>
+    <a href="{{ site.baseurl }}/contact">Nous contacter</a>
 </nav>
 
