--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,17 @@ body {
 }
 
 .image-galerie {
-  max-width: 400px;
+  max-width: 600px;
   width: 100%
   height: auto
   display: block
   margin: 2em auto;
+}
+
+main img {
+    max-width: 800px;
+    width: 100%;
+    height: auto;
 }
 
 main {
