--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,19 @@
 body {
   font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.6;
+  color: #222;
   margin: 0;
+}
+
+h1 {
+    font-size: 2.4rem;
+    margin-bottom: 0.5em;
+}
+
+h2 {
+    font-size: 1.8rem;
+    margin-bottom: 2em;
 }
 
 .navbar {
@@ -33,6 +46,18 @@ main img {
 }
 
 main {
-  padding: 2em;
+  max-width: 800 px;
+  margin: 0 auto;
+  padding: 2em 1em;
 }
 
+main h1,
+main h2,
+main h3 {
+    text-align: center;
+}
+
+main p,
+main ul {
+    text-align: left;
+}
