--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   font-size: 18px;
-  line-height: 1.6;
+  line-height: 1.4;
   color: #222;
   margin: 0;
 }
@@ -54,7 +54,7 @@ main {
 main h1,
 main h2,
 main h3 {
-    text-align: center;
+    text-align: left;
 }
 
 main p,
