--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ h2 {
 }
 
 .image-galerie {
+  max-width: 500 px;
   width: 100%
   height: auto
   display: block
@@ -39,6 +40,7 @@ h2 {
 }
 
 main img {
+    max-width: 500 px;
     width: 100%;
     height: auto;
 }
