--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,14 @@ h2 {
   margin: 2em auto;
 }
 
+.small-vignette {
+  max-width: 200 px;
+  width: 100%
+  height: auto
+  display: block
+  margin: 2em auto;
+}
+
 .hero {
     position: relative;
     max-width: 100%;
