--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,17 +33,17 @@ h2 {
 
 .image-galerie {
   max-width: 500 px;
-  width: 100%
-  height: auto
-  display: block
+  width: 100%;
+  height: auto;
+  display: block;
   margin: 2em auto;
 }
 
 .small-vignette {
   max-width: 200 px;
-  width: 50%
-  height: auto
-  display: block
+  width: 50%;
+  height: auto;
+  display: block;
   margin: 2em auto;
 }
 
