--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ h2 {
 }
 
 .small-vignette {
-  max-width: 200 px;
+  max-width: 100 px;
   width: 50%;
   height: auto;
   display: block;
@@ -74,6 +74,16 @@ h2 {
 .hero-text h1 {
     margin: 0;
     font-size: 2.8em;
+}
+
+.hero-text h2 {
+    margin: 0;
+    font-size: 1.8em;
+}
+
+.hero-text p {
+    margin: 0;
+    font-size: 1em;
 }
 
 main img {
