--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,21 @@ h2 {
   margin: 2em auto;
 }
 
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  margin: 2em 0;          /* spacing */
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .hero {
     position: relative;
     max-width: 100%;
