added future events

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,6 @@
 <nav class="navbar">
     <a href="{{ site.baseurl }}/">Accueil</a>
+    <a href="{{ site.baseurl }}/futurs">Évènements à venir</a>
     <a href="{{ site.baseurl }}/evenements">Évènements passés</a>
     <a href="{{ site.baseurl }}/galerie">Galerie</a>
     <a href="{{ site.baseurl }}/contact">Nous contacter</a>
