--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
     <a href="{{ site.baseurl }}/">Accueil</a>
-    <a href="{{ site.baseurl }}/futurs">Évènements à venir</a>
+    <a href="{{ site.baseurl }}/futurs">Prochains bals</a>
     <a href="{{ site.baseurl }}/evenements">Évènements passés</a>
     <a href="{{ site.baseurl }}/galerie">Galerie</a>
-    <a href="{{ site.baseurl }}/contact">Nous contacter</a>
+    <a href="{{ site.baseurl }}/contact">Contact</a>
 </nav>
 
