increased banner font size

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <a href="{{ site.baseurl }}/">Accueil</a>
     <a href="{{ site.baseurl }}/futurs">Prochains bals</a>
-    <a href="{{ site.baseurl }}/evenements">Évènements passés</a>
+    <a href="{{ site.baseurl }}/evenements">Bals passés</a>
     <a href="{{ site.baseurl }}/galerie">Galerie</a>
     <a href="{{ site.baseurl }}/contact">Contact</a>
 </nav>
