--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,13 +81,6 @@ h2 {
   object-fit: cover; /* crop images nicely */
 }
 
-.photo-item {
-    position: relative;
-    width: 100%;
-    padding-bottom: 60%;
-    overflow: hidden;
-    border-radius: 8px;
-}
 
 /* Responsive YouTube videos */
 .video-container {
@@ -102,6 +95,30 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.photo-gallery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1em;
+  margin: 2em 0;
+}
+
+.photo-item {
+  position: relative;
+  width: 100%;
+  padding-bottom: 60%; /* aspect ratio 5:3 (adjust as needed) */
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.photo-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* crops image to fill the box */
 }
 
 main img {
