--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
 
 h1 {
     font-size: 3rem;
+    margin-top: 0.2em;
     margin-bottom: 0.2em;
 }
 
@@ -42,7 +43,7 @@ h2 {
 
 .small-vignette {
   max-width: 100 px;
-  width: 50%;
+  width: 70%;
   height: auto;
   display: block;
   margin: 2em auto;
