--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,9 +147,12 @@ h2 {
 
 .audio-title {
   position: absolute;
-  bottom: 12px;
+  bottom: 50%;
   left: 12px;
   right: 12px;
+  transform: translateY(50%);
+
+  text-align: center;
 
   color: #111;
   font-size: 1.1rem;
@@ -159,6 +162,10 @@ h2 {
   background: rgba(255, 255, 255, 0.75);
   padding: 0.4em 0.6em;
   border-radius: 4px;
+}
+
+.audio-card.active .audio-title {
+  display: none;
 }
 
 .audio-card iframe {
