--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ h2 {
   height: 220px;
 
   object-fit: contain;
-  background: white;
+  background: whitesmoke;
 
   padding: 12px;
   box-sizing: border-box;
