lower position for text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,12 +148,13 @@ h2 {
   padding: 12px;
   box-sizing: border-box;
 
+  border-radius: 6px;
   display: block;
 }
 
 .audio-title {
   position: absolute;
-  bottom: 50%;
+  bottom: 16px;
   left: 12px;
   right: 12px;
   transform: translateY(50%);
@@ -166,7 +167,7 @@ h2 {
   line-height: 1.2;
 
   background: rgba(255, 255, 255, 0.75);
-  padding: 0.6em 0.6em;
+  padding: 0.4em 0.4em;
   border-radius: 4px;
 }
 
