--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ h2 {
   height: 220px;
 
   object-fit: contain;
-  background: whitesmoke;
+  background: white;
 
   padding: 12px;
   box-sizing: border-box;
@@ -155,8 +155,8 @@ h2 {
 .audio-title {
   position: absolute;
   bottom: 16px;
-  left: 12px;
-  right: 12px;
+  left: 100px;
+  right: 100px;
   transform: translateY(50%);
 
   text-align: center;
